$Id$

NEWS for SoftHSM -- History of user visible changes

New in 1.0-RC2; 2009-0X-XX Rickard Bondesson

* Added a check for the Botan library in config script
* SoftHSM will not add a default label/ID to a key pair when the
  key pair is generated, as were the case in the previous
  versions.
* Improved database handling
* New database schema. Is not compliant with previous versions.

New in 1.0-RC1; 2009-03-10 Rickard Bondesson

* Versioning moved to the configure script
* This is release candidate 1

New in 0.5; 2009-02-20 Rickard Bondesson

* Admin tool for creating tokens.
* Config file in /etc/softhsm.conf
* All session objects are removed when the session creating
  them are closed.
* User credentials as specified in PKCS#11

New in 0.4; 2009-02-10 Rickard Bondesson

* Only one library is compiled (libsofthsm.so). The log level
  is defined by using the flag --with-loglevel

New in 0.3; 2009-02-03 Rickard Bondesson

* A better mutex handling. Each PKCS#11 function call is treated 
  as atomic functions. The mutex handling is activated when given 
  correct parameters to the init function. 

New in 0.2; 2009-01-23 Rickard Bondesson

* Two libraries are compiled. One normal (libsofthsm.so) and
  one for debugging (libsofthsm.d.so). The debug info is saved
  in the syslog.

New in 0.1; 2009-01-21 Rickard Bondesson

* Starting point of the NEWS file.
* Have an interface to the user in accordance with PKCS#11.
* This file will be properly maintained when we start releasing 
  the source code.