@@ -10,6 +10,7 @@ New in 1.0-RC2; 2009-0X-XX Rickard Bondesson
   versions.
 * Improved database handling
 * New database schema. Is not compliant with previous versions.
+* Comments can be added to the config file by using #
 
 New in 1.0-RC1; 2009-03-10 Rickard Bondesson
 
